--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     --background-color1: #2f303a;
     --icon-color: #afb1b8;
 }
-/* style globalne */
+/* style globalne ///////////////////////////////////////////////////////////////////////// */
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #fff;
@@ -43,7 +43,7 @@ img {
     padding: 0 15px;
 }
 
-/* style w header */
+/* style w header //////////////////////////////////////////////////////////////////////////*/
 .logo {
     color: var(--brand-color);
     font-weight: 700;
@@ -142,7 +142,7 @@ img {
     fill: var(--brand-color);
 }
 
-/* style w main index.html*/
+/* style w main index.html //////////////////////////////////////////////////////////////////*/
 .solutions {
     background-color: var(--background-color1);
     background-image: linear-gradient(
@@ -335,7 +335,7 @@ img {
     border: 1px solid var(--brand-color);
 }
 
-/* style w main portfolio.html */
+/* style w main portfolio.html //////////////////////////////////////////////////////////////////*/
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -426,7 +426,7 @@ img {
     line-height: 2;
     margin-bottom: 4px;
 }
-/* style w footer */
+/* style w footer ////////////////////////////////////////////////////////////////////////////////*/
 .footer-container {
     background-color: var(--background-color1);
     padding-top: 60px;
@@ -509,8 +509,67 @@ img {
 .contact-footer:focus {
     color: var(--brand-color);
 }
+.sign-in {
+    height: 50px;
+    width: 200px;
+    background-color: var(--brand-color);
+    color: #fff;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    font-weight: 700;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    padding: 0 0 0 14px;
+    margin-top: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+.sign-in {
+    cursor: pointer;
+}
+.icon-send {
+    fill: #fff;
+    vertical-align: middle;
+}
+.sign-in-email {
+    height: 50px;
+    width: 358px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: var(--background-color1);
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    padding: 15px 16px;
+}
+.sign-in-label {
+    color: #fff;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.sign-in-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.sign-in-form {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    margin-left: 13px;
+    align-items: flex-start;
+}
 
-/* style dla okna modalnego */
+/* style dla okna modalnego /////////////////////////////////////////////////////////////////// */
 .backdrop {
     width: 100%;
     height: 100%;
@@ -564,4 +623,129 @@ img {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+/* style dla formularza w oknie modalnym //////////////////////////////////////////////*/
+.data-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin: 40px;
+}
+.form-heading {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    margin-bottom: 2px;
+    color: var(--font-color1);
+}
+.form-label {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+.fill-form {
+    position: relative;
+}
+.fill-icon {
+    position: absolute;
+    top: 11px;
+    left: 12px;
+    fill: var(--font-color1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.accept-label {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.name-input,
+.phone-input,
+.email-input {
+    height: 40px;
+    width: 448px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.name-input:focus-within,
+.phone-input:focus-within,
+.email-input:focus-within {
+    border-color: var(--brand-color);
+}
+
+.name-input:focus-within + .fill-icon,
+.phone-input:focus-within + .fill-icon,
+.email-input:focus-within + .fill-icon {
+    fill: var(--brand-color);
+}
+
+.comment-input {
+    height: 120px;
+    width: 448px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+}
+.label-name {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--font-color2);
+}
+.accept-check {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--font-color2);
+}
+.terms {
+    color: var(--brand-color);
+}
+.send {
+    height: 50px;
+    width: 200px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    background-color: var(--brand-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: var(--brand-color);
+}
+.send:hover,
+.send:focus {
+    cursor: pointer;
+}
+textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    padding: 12px 16px;
+    color: rgba(117, 117, 117, 0.5);
+}
+.form-checkbox {
+    display: none;
+}
+.form-checkbox:checked + .custom-checkbox > svg {
+    opacity: 1;
+}
+
+.custom-checkbox {
+    border: 2px solid black;
+    border-radius: 4px;
+    height: 15px;
+    min-width: 16px;
+    position: relative;
+    margin-right: 8px;
+}
+
+.custom-checkbox > svg {
+    opacity: 0;
+    position: absolute;
+    display: block;
 }
