--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,6 @@ img {
     line-height: 1.17;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
-    padding-bottom: 31px;
 }
 .nav-item:hover,
 .nav-item:focus {
@@ -95,7 +94,8 @@ img {
     width: 100%;
     height: 4px;
     left: 0;
-    bottom: 0;
+
+    top: 44px;
     position: absolute;
     border-radius: 2px;
 }
@@ -435,7 +435,7 @@ img {
 .footer-elements {
     max-width: 1200px;
     display: flex;
-    gap: 65px;
+    gap: 60px;
     justify-content: flex-start;
     margin: 0 auto;
     padding: 0 15px;
@@ -658,6 +658,8 @@ img {
 .accept-label {
     margin-top: 10px;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
 }
 
 .name-input,
@@ -737,15 +739,18 @@ textarea::placeholder {
 
 .custom-checkbox {
     border: 2px solid black;
-    border-radius: 4px;
+    border-radius: 3px;
     height: 15px;
-    min-width: 16px;
+    width: 16px;
     position: relative;
     margin-right: 8px;
+    display: block;
 }
 
 .custom-checkbox > svg {
     opacity: 0;
     position: absolute;
     display: block;
+    top: -2px;
+    left: -1.5px;
 }
